--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "dependencies": {
-    "@openzeppelin/contracts": "^4.0.0",
-    "truffle-contract-size": "^2.0.1"
+    "@openzeppelin/contracts": "^4.0.0"
   }
 }
